# nit

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  index.js  package-lock.json  package.json  test.js
cli/: CMakeLists.txt  guard.h  nit-addon.cc
nit_release/: Darwin.nit-addon.node  Darwin.nit-addon.node-v16.19.0  Windows_NT.nit-addon.node
nit_release/v14/: Linux.nit-addon.node
nit_release/v16/: Darwin.nit-addon.node  Linux.nit-addon.node  Windows_NT.nit-addon.node  libnit.dylib
node-addon/: CMakeLists.txt  package.json
node-addon/addon/: addon.cc  index.js
src/nit/: CMakeLists.txt
src/nit/enum/: card_distribution.cc  showdown_enumerator.cc
src/nit/eval/: badugi_hand_evaluator.h  card_set.cc  make_evaluator.cc  poker_hand.cc  poker_hand_evaluation.h  poker_hand_evaluator.h  rank.cc  suit.cc  universal_hand_evaluator.h
